[tool.poetry]
authors = ["Mingzhan Yang <18742525689@mail.dlut.edu.cn>", "Guangxin Han <hanguangxindlut@mail.dlut.edu.cn>", "Meheraj Hossain <meheraj.hossain@therapservices.net>", "Raheeb Hassan <raheeb.hassan@therapservices.net>"]
description = "Official implementation for CLIP-ReID: Exploiting Vision-Language Model for Image Re-identification without Concrete Text Labels (AAAI 2023)"
license = "LICENSE"
name = "hybridsort"
packages = [{include = "hybridsort"}]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.10"
filterpy = "1.4.5"
numpy = ">=1.20"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
